objects/Customer_Contract_Services__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Contract__c</fullName>
        <label>Customer Contract</label>
        <referenceTo>CRMDB__c</referenceTo>
        <relationshipName>Customer_Contract_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENTERPRISE NETWORKING</fullName>
                </value>
                <value>
                    <fullName>SP NETWORKING</fullName>
                </value>
                <value>
                    <fullName>MANAGED SERVICES ACCELERATOR</fullName>
                </value>
                <value>
                    <fullName>DC INFRASTRUCTURE</fullName>
                </value>
                <value>
                    <fullName>CLOUD AUTOMATION &amp; ORCHESTRATION</fullName>
                </value>
                <value>
                    <fullName>MANAGED VOICE</fullName>
                </value>
                <value>
                    <fullName>MANAGED VIDEO</fullName>
                </value>
                <value>
                    <fullName>MANAGED CONTACT CENTER</fullName>
                </value>
                <value>
                    <fullName>ATA ESSENTIAL</fullName>
                </value>
                <value>
                    <fullName>ATA PREMIER</fullName>
                </value>
                <value>
                    <fullName>DETECTION &amp; RESPONSE</fullName>
                </value>
                <value>
                    <fullName>Ngena</fullName>
                </value>
                <value>
                    <fullName>UCAAS</fullName>
                </value>
                <value>
                    <fullName>VaaS</fullName>
                </value>
                <value>
                    <fullName>CCaaS</fullName>
                </value>
                <value>
                    <fullName>XAAS</fullName>
                    <isActive>false</isActive>
                    <label>XAAS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Sub_Category_Name__c</fullName>
        <label>Service Sub Category Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Service_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACI</fullName>
                </value>
                <value>
                    <fullName>CCaaS</fullName>
                </value>
                <value>
                    <fullName>Cloud Center</fullName>
                </value>
                <value>
                    <fullName>Converged/HCI</fullName>
                </value>
                <value>
                    <fullName>Crosswork</fullName>
                </value>
                <value>
                    <fullName>CVIM</fullName>
                </value>
                <value>
                    <fullName>Device Management</fullName>
                </value>
                <value>
                    <fullName>DNA-C</fullName>
                </value>
                <value>
                    <fullName>EPN5.0</fullName>
                </value>
                <value>
                    <fullName>IP/MPLS/Optical</fullName>
                </value>
                <value>
                    <fullName>LAN/WAN</fullName>
                </value>
                <value>
                    <fullName>Managed Contact Center</fullName>
                </value>
                <value>
                    <fullName>Managed Video</fullName>
                </value>
                <value>
                    <fullName>Managed Voice</fullName>
                </value>
                <value>
                    <fullName>MDR</fullName>
                </value>
                <value>
                    <fullName>Mobile Cloud</fullName>
                </value>
                <value>
                    <fullName>MSX</fullName>
                </value>
                <value>
                    <fullName>Network/Storage</fullName>
                </value>
                <value>
                    <fullName>NSO</fullName>
                </value>
                <value>
                    <fullName>Optical</fullName>
                </value>
                <value>
                    <fullName>SAE</fullName>
                </value>
                <value>
                    <fullName>SAP Hana / Hadoop</fullName>
                </value>
                <value>
                    <fullName>SD-WAN</fullName>
                </value>
                <value>
                    <fullName>Tetration</fullName>
                </value>
                <value>
                    <fullName>Threat Management</fullName>
                </value>
                <value>
                    <fullName>UCAAS</fullName>
                </value>
                <value>
                    <fullName>UCS-M/C/D</fullName>
                </value>
                <value>
                    <fullName>UCS Software (UCSD)</fullName>
                </value>
                <value>
                    <fullName>VaaS</fullName>
                </value>
                <value>
                    <fullName>VDI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Sub_Category__c</fullName>
        <label>Offer Capability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Customer Contract Offer</label>
    <nameField>
        <label>Offer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Contract Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>